updated CP2 install file

--- a/cp2/ta/install
+++ b/cp2/ta/install
@@ -1,10 +1,9 @@
 #!/bin/bash
 docker pull cmumars/cp2:base
 docker pull cmumars/cp2:instrument
-docker pull cmumars/cp2mockth
-docker pull cmumars/orchestrator
-docker pull squareslab/rooibos
-docker pull squareslab/rooibosd
-docker pull squareslab/bugzoo
-docker pull squareslab/boggart
+docker pull cmumars/cp2mockth:codefreeze
+docker pull cmumars/orchestrator:codefreeze
+docker pull squareslab/rooibosd:0.0.1
+docker pull squareslab/bugzoo:2.1.14
+docker pull squareslab/boggart:0.1.12
 docker-compose build
